Initial support for stashing and fetching null